--- a/Auth.Infrastructure/Auth.Persistence.csproj
+++ b/Auth.Infrastructure/Auth.Persistence.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Auth.Core\Auth.Core.csproj" />
+    <ProjectReference Include="..\Auth.Core\Auth.Domain.csproj" />
   </ItemGroup>
 
 </Project>
