--- a/Auth.Application/Auth.Application.csproj
+++ b/Auth.Application/Auth.Application.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Auth.Core\Auth.Core.csproj" />
-    <ProjectReference Include="..\Auth.Infrastructure\Auth.Infrastructure.csproj" />
+    <ProjectReference Include="..\Auth.Core\Auth.Domain.csproj" />
+    <ProjectReference Include="..\Auth.Infrastructure\Auth.Persistence.csproj" />
   </ItemGroup>
 
 </Project>
